--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "project_spray",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -11,9 +12,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "lodash-es": "^4.17.15",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.15"
   },
   "scripts": {
     "start": "react-scripts start",
