--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "lodash-es": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-cookie-consent": "^5.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-spring": "^8.0.27",
-    "react-use-gesture": "^7.0.15"
+    "react-router-hash-link": "^1.2.2",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
