--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project_spray",
-  "homepage": ".",
+  "homepage": "https://sansiel.de",
   "version": "0.1.0",
   "private": true,
   "engines": {
