--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-cookie-consent": "^5.0.0",
     "react-dom": "^16.13.1",
     "react-google-recaptcha": "^2.0.1",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1"
